--- a/manifest.json
+++ b/manifest.json
@@ -19,14 +19,15 @@
         "modules" : {
             "Bluetooth" : {},
             "Maps" : {},
-            "VideoPlayer" : {}
+            "VideoPlayer" : {},
+            "Push" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
             /* android打包配置 */
             "android" : {
                 "permissions" : [
-					"<uses-permission android:name=\"android.permission.RECEIVE_USER_PRESENT\"/>",
+                    "<uses-permission android:name=\"android.permission.RECEIVE_USER_PRESENT\"/>",
                     "<uses-feature android:name=\"android.hardware.camera\"/>",
                     "<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
@@ -69,6 +70,9 @@
                         "appkey_ios" : "dc616c506637384d94a2f281a7682488",
                         "appkey_android" : "bd021fea2270728634d0c244ff8a44a5"
                     }
+                },
+                "push" : {
+                    "unipush" : {}
                 }
             },
             "orientation" : [ "portrait-primary" ],
