--- a/manifest.json
+++ b/manifest.json
@@ -17,10 +17,10 @@
         },
         /* 模块配置 */
         "modules" : {
-            "Bluetooth" : {},
             "Maps" : {},
             "VideoPlayer" : {},
-            "Push" : {}
+            "Push" : {},
+            "Bluetooth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
